Adicionados arquivos nos módulos de cadastro, estou trabalhando no pesquisa(erro de segmentação)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "stdio.h": "c",
         "siglibrary.h": "c",
-        "menuemprestimos.h": "c"
+        "menuemprestimos.h": "c",
+        "clearscr.h": "c",
+        "menulivros.h": "c"
     }
 }
